a huge update, I don't know what the fuck I have done :)

--- a/forsouth/Dockerfile
+++ b/forsouth/Dockerfile
@@ -1,6 +1,6 @@
-FROM openjdk:11
+FROM openjdk:11.0.11
 WORKDIR /opt
 
-COPY target/forsouth-0.0.1-SNAPSHOT.jar /opt/forsouth-0.0.1-SNAPSHOT.jar
+COPY target/for-south.jar /opt/for-south.jar
 
-ENTRYPOINT ["java", "-jar", "forsouth-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java", "-jar", "for-south.jar"]
