--- a/forsouth/src/main/resources/application.properties
+++ b/forsouth/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #spring.data.mongodb.uri=mongodb://localhost:27017/mydb
-spring.data.mongodb.uri=mongodb+srv://${MONGO-USERNAME}:${MONGO-PASSWORD}@${MONGO-CLUSTER}/${MONGO-OPTION}
-spring.data.mongodb.database=${MONGO-DB}
+spring.data.mongodb.uri=mongodb+srv://haiholmes99:ditmewiBu@cluster-dev-cua-hai.cas62pr.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=mydb
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 spring.mongodb.embedded.version=4.0.21
 spring.devtools.livereload.enabled=true
