--- a/forsouth/src/main/resources/application.properties
+++ b/forsouth/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.data.mongodb.database=mydb
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 spring.mongodb.embedded.version=4.0.21
 spring.devtools.livereload.enabled=true
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9090/realms/for-south-app
