add global exception handler

--- a/forsouth/src/main/resources/application.properties
+++ b/forsouth/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/mydb
-#spring.data.mongodb.uri=mongodb+srv://haiholmes99:ditmewiBu@cluster-dev-cua-hai.cas62pr.mongodb.net/?retryWrites=true&w=majority
+#spring.data.mongodb.uri=mongodb://localhost:27017/mydb
+spring.data.mongodb.uri=mongodb+srv://haiholmes99:ditmewiBu@cluster-dev-cua-hai.cas62pr.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=mydb
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 spring.mongodb.embedded.version=4.0.21
